parameterized assertTotalPrice()